samples/echoserverService.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  labels:
    app: echoserver
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: echo
  selector:
    app: echoserver
